# routes/index.js
@@ -3,17 +3,19 @@ const router = require('express').Router();
 const passport = require('passport');
 
 router.use('/', require('./swagger'));
-router.use('/books', require('./books'));
-router.use('/notes', require('./notes'));
+
+router.use('/literature', require('./literature'));
+router.use('/videogames', require('./videogames'));
 
 router.get('/login', passport.authenticate('github'), (req, res) => {});
 
-router.get('/logout', function(req, res, next) {
-  req.logout(function(err) {
-    if (err) { return next(err); }
+router.get('/logout', function (req, res, next) {
+  req.logout(function (err) {
+    if (err) {
+      return next(err);
+    }
     res.redirect('/');
   });
 });
-
 
 module.exports = router;
